--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  http: ^0.13.4
   english_words: ^4.0.0
   provider: ^6.0.0
   font_awesome_flutter: ^10.0.0
